# route/Mentor.js
@@ -1,0 +1,7 @@
+const express = require("express");
+const router = express.Router();
+const { getAllMentors } = require("../controller/Mentor");
+
+router.get("/", getAllMentors);
+
+module.exports = router;
