# route/Technology.js
@@ -1,8 +1,0 @@
-const express = require("express")
-const {addTechnology}=require("../controller/Technology")
-
-const router = express.Router()
-
-router.post("/add", addTechnology);
-
-module.exports = router
